--- a/playbooks/roles/helios/tasks/master.yml
+++ b/playbooks/roles/helios/tasks/master.yml
@@ -21,5 +21,5 @@
   service: name=helios-master state=started enabled=yes
 
 - include: verify-master.yml master={{ common.net.localhost }} host="{{ master_name }}"
-- include: verify-master.yml master={{ helios_master }}        host="{{ master_name }}"
-- include: verify-helios.yml master={{ helios_master }}
+- include: verify-master.yml master={{ helios_master }} host="{{ master_name }}"
+- include: verify-helios.yml
