--- a/playbooks/roles/helios/tasks/common.yml
+++ b/playbooks/roles/helios/tasks/common.yml
@@ -2,15 +2,8 @@
 # --------------------------------------------
 #   Common tasks for Helios master and agent
 # --------------------------------------------
-- debug: msg="ansible_hostname = '{{ ansible_hostname }}'"
-- debug: msg="helios_master = '{{ helios_master }}'"
-- debug: msg="helios_master_port = '{{ helios_master_port }}'"
-- debug: msg="zookeeper_port = '{{ zookeeper_port }}'"
-- debug: msg="etcd_port = '{{ etcd_port }}'"
-- debug: msg="domain = '{{ domain }}'"
-
-- set_fact: helios_command="helios -z 'http://{{ helios_master }}:{{ helios_master_port }}'"
-- debug: msg="helios_command = '{{ helios_command }}'"
+- include: check-vars.yml
+  when:    helios_master is defined
 
 - include: "{{ common.utils.fake }}"
   vars:
