--- a/playbooks/roles/jenkins/vars/main.yml
+++ b/playbooks/roles/jenkins/vars/main.yml
@@ -1,47 +1,47 @@
 ---
 jenkins: {
-
   home: /var/lib/jenkins,
-
-#  github_auth: {
-#     # https://wiki.jenkins-ci.org/display/JENKINS/Github+OAuth+Plugin#GithubOAuthPlugin-Setup
-#     admins:       [ '...' ],
-#     clientID:     '...',
-#     clientSecret: '...'
-#  },
-#
-#  s3: {
-#     profile-name: [ '...', '...' ]
-#  },
+  key:  'https://jenkins-ci.org/debian/jenkins-ci.org.key',
+  repo: 'deb http://pkg.jenkins-ci.org/debian binary/',
+  user: jenkins,
 
   plugins: {
-    # Set to true to re-download all plugins
-    redownload: false,
-    root:       'https://updates.jenkins-ci.org',
-    install: {
-      # -------------------------------------------------------------------
-      # Plugin name: plugin version, '*' (for latest) or plugin's *.hpi URL
-      # -------------------------------------------------------------------
+    # -------------------------------------------------------------------------------------
+    #   Plugin name: plugin version, * (for latest), version number or plugin's *.hpi URL
+    # -------------------------------------------------------------------------------------
+    # https://wiki.jenkins-ci.org/display/JENKINS/EnvInject+Plugin
+    envinject:           '*',
+    ivy:                 '*',
+    # https://wiki.jenkins-ci.org/display/JENKINS/Credentials+Binding+Plugin
+    credentials-binding: '*',
+    plain-credentials:   '*',
+    # https://wiki.jenkins-ci.org/display/JENKINS/Rebuild+Plugin
+    rebuild:             '*',
+    # https://wiki.jenkins-ci.org/display/JENKINS/S3+Plugin
+    s3:                  '*',
+    copyartifact:        '*',
+    # https://wiki.jenkins-ci.org/display/JENKINS/GitHub+Plugin
+    github:              '*',
+    git:                 '*',
+    github-api:          '*',
+    git-client:          '*',
+    multiple-scms:       '*',
+    scm-api:             '*',
+    ssh-agent:           '*',
+    # https://wiki.jenkins-ci.org/display/JENKINS/Github+OAuth+Plugin
+    github-oauth:        '*',
+    # https://wiki.jenkins-ci.org/display/JENKINS/Notification+Plugin
+    notification:        '*'
+  }
+}
 
-      # https://wiki.jenkins-ci.org/display/JENKINS/Rebuild+Plugin
-      rebuild:       '*',
-      # https://wiki.jenkins-ci.org/display/JENKINS/S3+Plugin
-      s3:            '*',
-      copyartifact:  '*',
-      # https://wiki.jenkins-ci.org/display/JENKINS/GitHub+Plugin
-      github:        '*',
-      git:           '*',
-      github-api:    '*',
-      git-client:    '*',
-      multiple-scms: '*',
-      scm-api:       '*',
-      ssh-agent:     '*',
-      # https://wiki.jenkins-ci.org/display/JENKINS/Github+OAuth+Plugin
-      github-oauth:  '*',
-      # https://wiki.jenkins-ci.org/display/JENKINS/Notification+Plugin
-      notification:  '*'
-    }
-  },
+jenkins_auth: {
+  # https://wiki.jenkins-ci.org/display/JENKINS/Github+OAuth+Plugin#GithubOAuthPlugin-Setup
+  admins:       [ 'GitHub User', 'GitHub User', .. ],
+  clientID:     'clientID',
+  clientSecret: 'clientSecret'
+}
 
-  jobs: [ 'asgard' ]
+jenkins_s3: {
+  profile_name: [ 'accessKey', 'secretKey' ]
 }
