--- a/playbooks/jenkins-ubuntu.yml
+++ b/playbooks/jenkins-ubuntu.yml
@@ -12,7 +12,8 @@
 
   roles:
     - { role: run-before, period: daily }
-    - { role: docker,  when: periodic, pull: [ 'nginx:1.7.9', 'ubuntu:14.04.1', 'evgenyg/ansible:1.8.2' ]}
-    - { role: helios,  when: periodic, helios_role: cli }
-    - { role: jenkins, jobs: [{ name: echo-service, repo: 'https://github.com/evgeny-goldin/echo-service.git' }]}
+    - { role: java,       java_distribution: oracle_jdk }
+    - { role: docker,     when: periodic, pull: [ 'nginx:1.7.9', 'ubuntu:14.04.1', 'evgenyg/ansible:1.8.2' ]}
+    - { role: helios,     when: periodic, helios_role: cli }
+    - { role: jenkins,    jobs: [{ name: echo-service, repo: 'https://github.com/evgeny-goldin/echo-service.git' }]}
     - run-after
