--- a/playbooks/roles/helios/meta/main.yml
+++ b/playbooks/roles/helios/meta/main.yml
@@ -1,5 +1,5 @@
 ---
 dependencies:
-  - { role: java,      when: install_java|default(True)|bool }
+  - { role: java }
   - { role: zookeeper, when: periodic|bool and (( helios_role is undefined ) or ( helios_role == 'master' )) }
   - { role: skydns,    when: periodic|bool and (( helios_role is undefined ) or ( helios_role == 'master' )) }
