--- a/playbooks/roles/jenkins/vars/main.yml
+++ b/playbooks/roles/jenkins/vars/main.yml
@@ -15,6 +15,8 @@ jenkins: {
     # https://wiki.jenkins-ci.org/display/JENKINS/Credentials+Binding+Plugin
     credentials-binding: '*',
     plain-credentials:   '*',
+    workflow-step-api:   '*',
+    credentials:         '*',
     # https://wiki.jenkins-ci.org/display/JENKINS/Rebuild+Plugin
     rebuild:             '*',
     # https://wiki.jenkins-ci.org/display/JENKINS/S3+Plugin
@@ -37,11 +39,11 @@ jenkins: {
 
 jenkins_auth: {
   # https://wiki.jenkins-ci.org/display/JENKINS/Github+OAuth+Plugin#GithubOAuthPlugin-Setup
-  admins:       [ 'GitHub User', 'GitHub User', .. ],
-  clientID:     'clientID',
-  clientSecret: 'clientSecret'
+  # admins:       [ 'GitHub User', 'GitHub User', .. ],
+  # clientID:     'clientID',
+  # clientSecret: 'clientSecret'
 }
 
 jenkins_s3: {
-  profile_name: [ 'accessKey', 'secretKey' ]
+  # profile_name: [ 'accessKey', 'secretKey' ]
 }
