--- a/playbooks/roles/helios/tasks/common.yml
+++ b/playbooks/roles/helios/tasks/common.yml
@@ -30,8 +30,8 @@
 
 - include: "{{ common.utils.run }}"
   vars:
-    title:   Helios
-    command: { run: 'helios --version', expect: 'Spotify Helios CLI {{ helios_version }}'  }
+    title:   Helios checks
+    command: { run: helios --version, expect: 'Spotify Helios CLI {{ helios_version }}'  }
 
 - name: Installing Python pip
   apt:  name=python-pip state=latest force=yes
