--- a/playbooks/roles/exhibitor/vars/main.yml
+++ b/playbooks/roles/exhibitor/vars/main.yml
@@ -1,6 +1,7 @@
 ---
 exhibitor: {
-  version: latest, # 1.5.2, latest - https://github.com/Netflix/exhibitor/releases
+  version: 1.5.2, # 1.5.2, latest - https://github.com/Netflix/exhibitor/releases
+                  # 1.5.3 causes http://goo.gl/VmITMv
   port:    8080,
   latest: {
     command: "curl -Ls '{{ common.urls.jcenter }}/com/netflix/exhibitor/exhibitor-standalone/' | grep '<pre>' | grep -v 'maven-metadata.xml' | sed -r 's/<[^>]+>//g' | tr -d '/' | tail -1",
