--- a/playbooks/roles/helios/tasks/agent-docker.yml
+++ b/playbooks/roles/helios/tasks/agent-docker.yml
@@ -25,12 +25,13 @@
 - name:    Restarting Docker service
   service: name=docker state=restarted enabled=yes
 
-- name:     Running Docker
-  command:  docker ps
-  register: docker_out
-
-- fail: msg="Failed to run 'docker ps', result is [{{ docker_out.stdout }}]"
-  when: not ( 'CONTAINER ID' in docker_out.stdout )
+- include: "{{ common.utils.run }}"
+  vars:
+    title: Docker status checks
+    commands:
+      - { run: docker --version, expect: Docker version  }
+      - { run: docker ps,        expect: [ CONTAINER ID, IMAGE, COMMAND, CREATED, STATUS, PORTS, NAMES ]}
+      - { run: docker images,    expect: [ REPOSITORY, TAG, IMAGE ID, CREATED, VIRTUAL SIZE ]}
 
 - name: Checking Docker remote API
   uri: url="{{ helios.agent.docker.http }}/info" return_content=yes timeout=5
