--- a/playbooks/roles/mysql/tasks/main.yml
+++ b/playbooks/roles/mysql/tasks/main.yml
@@ -33,17 +33,10 @@
 - name: Starting MySQL service
   service: name=mysql state=started
 
-- name:     Running MySQL version
-  command:  mysql --version
-  register: mysql_version_out
-
-- debug: var=mysql_version.stdout
-
-- name: Verifying MySQL version
-  assert:
-    that:
-      - "'mysql' in mysql_version_out.stdout"
-      - "'5.6'   in mysql_version_out.stdout"
+- include: "{{ common.utils.run }}"
+  vars:
+    title: MySQL check
+    command: { run: mysql --version, expect: [ mysql, 5.6 ] }
 
 - set_fact:
     remote_access_script: /etc/mysql/root_remote_access.sql
