--- a/playbooks/roles/zookeeper/tasks/main.yml
+++ b/playbooks/roles/zookeeper/tasks/main.yml
@@ -17,10 +17,8 @@
     command: "{{ zookeeper_home }}/bin/zkServer.sh start-foreground"
     port:    "{{ zookeeper_port }}"
 
-- name: Running zkCli
-  shell:    "echo 'ls /' | {{ zookeeper_home }}/bin/zkCli.sh -server {{ common.net.localhost }}:{{ zookeeper_port }}"
-  register: zk_out
-
-- name: Verifying zkCli
-  fail: msg="Failed to execute zkCli - {{ zk_out }}"
-  when: "'{{ common.net.localhost }}:{{ zookeeper_port }}(CONNECTED)' not in zk_out.stdout"
+- include: "{{ common.utils.run }}"
+  vars:
+    title: zkCli check
+    command: { run:    "echo 'ls /' | '{{ zookeeper_home }}/bin/zkCli.sh' -server '{{ common.net.localhost }}:{{ zookeeper_port }}'",
+               expect: '{{ common.net.localhost }}:{{ zookeeper_port }}(CONNECTED)' }
