--- a/playbooks/utils/run.yml
+++ b/playbooks/utils/run.yml
@@ -2,7 +2,10 @@
 # ===================================================================================================
 # Runs commands and verifies their output. Required variables: title, commands or command.
 # ===================================================================================================
-- debug: msg="Running {{ title }} commands"
+- debug: msg="Running {{ title }}"
+
+- fail: msg="One of commands/command need to be specified"
+  when: not (( commands is defined ) or ( command is defined ))
 
 - command:     "{{ ubuntu.bash }} -c '{{ item.run }} 2>&1'"
   environment: "{{ env | default({}) }}"
@@ -10,3 +13,12 @@
   failed_when: not ( command_out.stdout_lines | default(['']) | contains( item.expect | default('') ))
   with_items:
     - "{{ commands | default([ command ]) }}"
+  when: not ( commands | default([ command ]) | contains( '|' ))
+
+- shell:       "{{ item.run }} 2>&1"
+  environment: "{{ env | default({}) }}"
+  register:    shell_out
+  failed_when: not ( shell_out.stdout_lines | default(['']) | contains( item.expect | default('') ))
+  with_items:
+    - "{{ commands | default([ command ]) }}"
+  when: commands | default([ command ]) | contains( '|' )
