--- a/playbooks/roles/nexus/vars/main.yml
+++ b/playbooks/roles/nexus/vars/main.yml
@@ -1,9 +1,9 @@
 ---
 nexus: {
-  version: '2.11.1-01',
+  version: '2.11.1-01', # http://www.sonatype.org/nexus/thank-you-for-downloading/?dl=tgz
   port:    8080,
-  timeout: 120,        # in seconds
-  run:     standalone, # standalone, war
+  timeout: 120,         # in seconds
+  run:     standalone,  # standalone, war
   standalone: {
     url:     'https://sonatype-download.global.ssl.fastly.net/nexus/oss/nexus-<version>-bundle.tar.gz',
     archive: /opt/nexus-<version>.tar.gz,
