Test repo role - search simulations supported, local Artifactory/Nexus repos, Gatling JVM options can be provided

--- a/playbooks/roles/nexus/vars/main.yml
+++ b/playbooks/roles/nexus/vars/main.yml
@@ -29,6 +29,6 @@ nexus: {
   import: {
     archive: /opt/repo-import.<ext>,
     home:    <home>/sonatype-work/nexus/storage,
-    repo:    central
+    repo:    releases
   }
 }
