--- a/playbooks/roles/artifactory/vars/main.yml
+++ b/playbooks/roles/artifactory/vars/main.yml
@@ -34,6 +34,6 @@ artifactory: {
   import: {
     archive: /opt/repo-import.<ext>,
     home:    /opt/repo-import,
-    repo:    jcenter-cache
+    repo:    libs-release-local
   }
 }
