--- a/playbooks/roles/nexus/tasks/import.yml
+++ b/playbooks/roles/nexus/tasks/import.yml
@@ -17,7 +17,7 @@
 
 # https://support.sonatype.com/entries/38605563-Can-I-directly-update-artifacts-in-Nexus-local-storage-on-disk-
 
-- name: Rebuilding Nexus index
+- name: Asking Nexus to rebuild the index
   uri:
     url:         "http://{{ common.net.localhost }}:{{ nexus_port }}/nexus/service/local/{{ item }}"
     user:        "{{ nexus.auth.user }}"
@@ -28,3 +28,13 @@
     - "repositories/{{ nexus.import.repo }}/routing"
     - "metadata/repositories/{{ nexus.import.repo }}/content/"
     - "data_index/repositories/{{ nexus.import.repo }}/content"
+
+- name: Waiting for Nexus to rebuild the index
+  uri:
+    url:     "http://{{ common.net.localhost }}:{{ nexus_port }}/nexus/service/local/lucene/search?q=o"
+    timeout: 5
+    return_content: yes
+  register: nexus_search
+  until:    "{{ ( nexus_search.content is defined ) and ( not ( '<totalCount>0</totalCount>' in nexus_search.content )) }}"
+  retries:  40
+  delay:    3
