--- a/playbooks/roles/test-repo/vars/main.yml
+++ b/playbooks/roles/test-repo/vars/main.yml
@@ -2,11 +2,14 @@
 test_repo: {
   files_dir: /opt,
   simulations: [
-    # { name: LightWarmup,  users: 1,   artifacts: few-files.txt },
-    { name: Warmup,  users: 1,   artifacts: all-artifacts-size-sorted.txt, duration: 60  },
-    { name: Get10,   users: 10,  artifacts: all-artifacts-name-sorted.txt, duration: 120 },
-    { name: Get50,   users: 50,  artifacts: all-artifacts-name-sorted.txt, repeat: 8 },
-    { name: Get100,  users: 100, artifacts: all-artifacts-name-sorted.txt, repeat: 4 },
-    { name: Get400,  users: 400, artifacts: all-artifacts-name-sorted.txt }
+    { name: Warmup,         users: 1,   artifacts: all-artifacts-size-sorted.txt },
+    { name: Get10,          users: 10,  artifacts: all-artifacts-name-sorted.txt },
+    { name: Get50,          users: 50,  artifacts: all-artifacts-name-sorted.txt },
+    { name: Get100,         users: 100, artifacts: all-artifacts-name-sorted.txt },
+    { name: Get400,         users: 400, artifacts: all-artifacts-name-sorted.txt },
+    { name: SearchQuick10,  users: 10,  artifacts: all-artifacts-name-sorted.txt, search: quick }
+    { name: SearchQuick50,  users: 50,  artifacts: all-artifacts-name-sorted.txt, search: quick }
+    { name: SearchQuick100, users: 100, artifacts: all-artifacts-name-sorted.txt, search: quick }
+    { name: SearchQuick400, users: 400, artifacts: all-artifacts-name-sorted.txt, search: quick }
   ]
 }
