--- a/playbooks/roles/test-repo/vars/main.yml
+++ b/playbooks/roles/test-repo/vars/main.yml
@@ -2,14 +2,15 @@
 test_repo: {
   files_dir: /opt,
   simulations: [
-    { name: Warmup,         users: 1,   artifacts: all-artifacts-size-sorted.txt },
-    { name: Get10,          users: 10,  artifacts: all-artifacts-name-sorted.txt },
-    { name: Get50,          users: 50,  artifacts: all-artifacts-name-sorted.txt },
-    { name: Get100,         users: 100, artifacts: all-artifacts-name-sorted.txt },
-    { name: Get400,         users: 400, artifacts: all-artifacts-name-sorted.txt },
-    { name: QuickSearch10,  users: 10,  artifacts: all-artifacts-name-sorted.txt, search: quick },
-    { name: QuickSearch50,  users: 50,  artifacts: all-artifacts-name-sorted.txt, search: quick },
-    { name: QuickSearch100, users: 100, artifacts: all-artifacts-name-sorted.txt, search: quick },
-    { name: QuickSearch400, users: 400, artifacts: all-artifacts-name-sorted.txt, search: quick }
+    { name: Warmup,               users: 1,   artifacts: all-artifacts-size-sorted.txt },
+    { name: Get10,                users: 10,  artifacts: all-artifacts-name-sorted.txt },
+    { name: Get50,                users: 50,  artifacts: all-artifacts-name-sorted.txt },
+    { name: Get100,               users: 100, artifacts: all-artifacts-name-sorted.txt },
+    { name: Get400,               users: 400, artifacts: all-artifacts-name-sorted.txt },
+    { name: QuickSearch100,       users: 100, artifacts: all-artifacts-name-sorted.txt, search: quick },
+    { name: GroupIdSearch100,     users: 100, artifacts: all-artifacts-name-sorted.txt, search: groupId },
+    { name: ArtifactIdSearch100,  users: 100, artifacts: all-artifacts-name-sorted.txt, search: artifactId },
+    { name: VersionSearch100,     users: 100, artifacts: all-artifacts-name-sorted.txt, search: version },
+    { name: GavSearch100,         users: 100, artifacts: all-artifacts-name-sorted.txt, search: gav }
   ]
 }
